# tangent-template

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: .gitattributes  .gitconfig  config.fish  starship.toml
.devcontainer/config/lsd/: icons.yaml
.devcontainer/config/nushell/: config.nu
.githooks/: pre-commit  pre-push
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md.md  feature_request.md
apps/nextjs/: package.json  rome.json  tsconfig.json
apps/nextjs/components/: Title.tsx  subtitle.tsx
apps/nextjs/pages/: index.tsx
notebooks/: README.md  pyproject.toml
