[tool.poetry]
name = "tangent-template"
version = "0.1.1"
description = "Monorepo starter for node and python projects"
license = "MIT"
authors = ["Tangent <contact@tangent.center>"]
repository = "https://github.com/tangent-berlin/tangent.git"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^0.22.0"
black = { extras = ["jupyter"], version = "^23.3.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
tag_format = "v$version"
version_files = [
  "package.json:^version",
  "pyproject.toml:^version",
  "notebooks/pyproject.toml:^version",
  "packages/python/tdsp/pyproject.toml:^version",
  "packages/python/tdsp/demo_py/__init__.py:^__version",
]
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
jupyterlab = "^3"
#JLDracula = "^0.1.0"
amazon_codeguru_jupyterlab_extension = "^1.0.0"
mypy = "0.910"
black = "^23.3.0"
"black[jupyter]" = "^23.3.0"
poetry-dynamic-versioning = "0.22.0"
dunamai = "^1.7.0"
commitizen = "^2.20.3"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.githooks
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )
| apps
| packages/typescript
| node_modules
)/
'''
