[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Project-less notebooks"
license = "MIT"
authors = ["Tangent <contact@tangent.center>"]
readme = "README.md"
include = ["README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)/
'''
